...
    case imbox, assistant, calendar, screener, more

    var id: Int { rawValue }

    var title: String {
        switch self {
        case .imbox: return "Imbox"
        case .assistant: return "Assistant"
        case .calendar: return "Calendar"
        case .screener: return "Screener"
        case .more: return "More"
        }
    }

    var icon: String {
        switch self {
        case .imbox: return "tray"
...
